updated website with product photos